--- a/test/index.html
+++ b/test/index.html
@@ -12,11 +12,11 @@ $( document ).ready(function() {
         $.post('http://54.83.200.29:8080/dhbox', formData);
     });
 
-    $("#add").click(function() {
+    $(document).on('submit', '#add', function(e) {
         var intId = $("#the_form div").length + 1;
         var userWrapper = $("<div class=\"userwrapper\" id=\"field" + intId + "\"/>");
         var newUserLabel = $("<label for=\"user" + intId + "\">User:</label>");
-        var newUser = $("<input type=\"text\" class=\"users\" id=\"user" + intId + "\" />");
+        var newUser = $("<input type=\"text\" class=\"users\" name=\"users\" id=\"user" + intId + "\" />");
         var removeButton = $("<input type=\"button\" class=\"remove\" value=\"-\" />");
         removeButton.click(function() {
             $(this).parent().remove();
