--- a/test/index.html
+++ b/test/index.html
@@ -5,13 +5,20 @@ title: Testing
 <script type="text/javascript">
 $( document ).ready(function() {
     // Prevents going to API page, allows showing a success indicator
+    // $('#dhbox_form_submit').click(function(e){
+    //     e.preventDefault();
+    //     var formData = $('#the_form').serialize();
+    //     console.log(formData);
+    //     $.post('http://66.108.238.228:3000/dhbox', function( formData ) {
+    //         console.log(formData);
+    // });
+    // });
+
     $('#dhbox_form_submit').click(function(e){
         e.preventDefault();
         var formData = $('#the_form').serialize();
         console.log(formData);
-        $.post('http://66.108.238.228:3000/dhbox', function( formData ) {
-            console.log(formData);
-    });
+        $.post('http://66.108.238.228:3000/dhbox', formData);
     });
 
     $(document).on('click', '#add', function(e) {
@@ -36,7 +43,7 @@ $( document ).ready(function() {
 });
 </script>
 <div class="col-md-10">
-    <form action="http://66.108.238.228:3000/dhbox" id="the_form" method="post">
+    <form action="http://66.108.238.228:3000/test" id="the_form" method="post">
         <div>
             <label for='admin'>Administrator:</label>
             <input type'text' id='admin' name='admin'/>
