--- a/test/index.html
+++ b/test/index.html
@@ -5,20 +5,11 @@ title: Testing
 <script type="text/javascript">
 $( document ).ready(function() {
     // Prevents going to API page, allows showing a success indicator
-    // $('#dhbox_form_submit').click(function(e){
-    //     e.preventDefault();
-    //     var formData = $('#the_form').serialize();
-    //     console.log(formData);
-    //     $.post('http://66.108.238.228:3000/dhbox', function( formData ) {
-    //         console.log(formData);
-    // });
-    // });
-
     $('#dhbox_form_submit').click(function(e){
         e.preventDefault();
         var formData = $('#the_form').serialize();
         console.log(formData);
-        $.post('http://66.108.238.228:3000/dhbox', formData);
+        $.post('http://54.235.239.235:8080/dhbox', formData);
     });
 
     $(document).on('click', '#add', function(e) {
@@ -26,16 +17,12 @@ $( document ).ready(function() {
         var userWrapper = $("<div class=\"userwrapper\" id=\"field" + intId + "\"/>");
         var newUserLabel = $("<label for=\"user" + intId + "\">User:</label>");
         var newUser = $("<input type=\"text\" class=\"users\" name=\"users\" id=\"user" + intId + "\" />");
-        var newPassLabel = $("<label for=\"passUser" + intId + "\">Password:</label>");
-        var newPass = $("<input type=\"text\" class=\"users\" name=\"userpasses\" id=\"passUser" + intId + "\" />");
         var removeButton = $("<input type=\"button\" class=\"remove\" value=\"-\" />");
         removeButton.click(function() {
             $(this).parent().remove();
         });
         userWrapper.append(newUserLabel);
         userWrapper.append(newUser);
-        userWrapper.append(newPassLabel);
-        userWrapper.append(newPass);
         userWrapper.append(removeButton);
         $("#the_form").append(userWrapper);
     });
@@ -43,12 +30,10 @@ $( document ).ready(function() {
 });
 </script>
 <div class="col-md-10">
-    <form action="http://66.108.238.228:3000/test" id="the_form" method="post">
+    <form action="http://66.108.238.228:3000/dhbox" id="the_form" method="post">
         <div>
             <label for='admin'>Administrator:</label>
             <input type'text' id='admin' name='admin'/>
-            <label for='adminPass'>Password:</label>
-            <input type'text' id='adminPass' name='adminPass'/>
         </div>
 <!--             <input type'text' class='users' name='users'/> -->
     </form>
@@ -59,4 +44,3 @@ $( document ).ready(function() {
             <input name="save" id='dhbox_form_submit' type="submit" value="Save" class="btn btn-success" />
         </div>
 </div>
-<div id='result'></div>
