--- a/test/index.html
+++ b/test/index.html
@@ -9,7 +9,7 @@ $( document ).ready(function() {
         e.preventDefault();
         var formData = $('#the_form').serialize();
         console.log(formData);
-        $.post('http://66.108.238.228:3000/test', formData);
+        $.post('http://66.108.238.228:3000/dhbox', formData);
     });
 
     $(document).on('click', '#add', function(e) {
