--- a/presentations/dhbox4lib.html
+++ b/presentations/dhbox4lib.html
@@ -33,16 +33,13 @@
                 <!-- Intro -->
                 <section>
                     <h1><img src="images/logo.png" style='max-height: 400px;max-width: 400px'></h1>
-                    <h1>A Digital Humanities<br/> Laboratory<br/>in the cloud <br/></h1>
+                    <h1>A Virtual<br/> Computer Lab<br/>in the Cloud <br/></h1>
                     <p>
                         <small><a href="https://twitter.com/_csmcc">Cailean Cooney</a>, <a href="https://twitter.com/DigiHumanatee">Harlan Kellaway</a>, &amp; <a href="https://github.com/szweibel">Stephen Zweibel</a>
                         </small>
                     </p>
                 </section>
-                <section >
-                    <section>
-                        <h1>What?</h1>
-                    </section>
+                <section>
                     <section>
                         <h1>DH: Digital Humanities</h1>
                         <p>Using computational methods for humanistic inquiry</p>
@@ -76,48 +73,22 @@
                     <section data-background="images/topics.png"></section>
                     <section data-background="images/ipython.png"></section>
                     <section>
-                        <h1>How?</h1>
-                        <p>
-                            <a href="#" class="navigate-down"> &darr; </a>
-                        </p>
+                        <h1>However...</h1>
                     </section>
                     <section>
-                    <h1>Knowledge</h1>
-                        <ul>
-                            <li class="fragment">Linux</li>
-                            <li class="fragment">Command Line</li>
-                            <li class="fragment">Databases</li>
-                            <li class="fragment">Programming Languages</li>
-                            <!-- <li class="fragment"></li> -->
-                        </ul>
-                        <p>
-                            <a href="#" class="navigate-down"> &darr; </a>
-                        </p>
-                    </section>
-                    <section>
-                        <h1>Infrastructure</h1>
-                        <ul>
-                            <li class="fragment">Computer Lab(s)</li>
-                            <li class="fragment">Servers</li>
-                            <li class="fragment">Institutional Backing</li>
-                        </ul>
-                        <p>
-                            <a href="#" class="navigate-down"> &darr; </a>
-                        </p>
-                    </section>
-                    <section>
-                        <h1>DH scholarship needs infrastructure</h1>
+                        <h2>Computational methods need infrastructure</h2>
+                        <p>(Especially hard to get in the humanities)</p>
                         <p>
                             <a href="#" class="navigate-right"> &rarr; </a>
                         </p>
                     </section>
                 </section>
-                <section >
+                <section>
                     <section>
                         <h1><img src="images/logo.png" style='max-height: 400px;max-width: 400px'></h1>
                         <ul>
                             <li>Virtual computer in the cloud</li>
-                            <li>Gold-standard DH tools pre-installed</li>
+                            <li>DH tools pre-installed</li>
                             <li>Clear documentation</li>
                         </ul>
                         <p>
@@ -138,9 +109,26 @@
                             <li>More coming</li>
                         </ul>
                         <p>
+                            <a href="#" class="navigate-right"> &rarr; </a>
+                        </p>
+                    </section>
+                </section>
+                <section>
+                    <section>
+                        <h1>How?</h1>
+                        <p>
                             <a href="#" class="navigate-down"> &darr; </a>
                         </p>
                     </section>
+                    <section>
+                        <h1>Technical "Details"</h1>
+                        <img src="images/flowchart.gif">
+                        <p>
+                            <a href="#" class="navigate-right"> &rarr; </a>
+                        </p>
+                    </section>
+                </section>
+                <section>
                     <section>
                         <h1>Who?</h1>
                         <p>Educators</p>
@@ -162,7 +150,7 @@
                         <UL>
                         <LI>Instantiates in 5 minutes</LI>
                         </UL>
-                        <li>Save space</li> 
+                        <li>Save space</li>
                         <ul>
                             <li>Computer lab in the cloud</li>
                         </ul>
@@ -174,14 +162,19 @@
                         <br/>
                         <p><small>https://aws.amazon.com/ec2/pricing/</small></p>
                     </section>
-<!--                    <section>
-                        <h1>Future Goals</h1>
-                    </section> -->
                     <section>
-                        <p>DH Box is in the classroom</p>
+                        <h2>DH Box is in the classroom</h2>
                         <p>Contact us:</p>
                         <p><a href="mailto:hello@dhbox.org?Subject=Hello" target="_top">
                         hello@dhbox.org</a></p>
+                    </section>
+                    <section>
+                        <h1>Next Steps</h1>
+                        <p>More custom installs</p>
+                        <p></p>
+                        <p>
+                            <a href="#" class="navigate-right"> &rarr; </a>
+                        </p>
                     </section>
                 </section>
                 <!-- Questions -->
@@ -197,9 +190,7 @@
                         <p>DH Box <a href="http://twitter.com/DH_Bx">@DH_Box</a></p>
                         <p>Stephen Zweibel <a href="http://twitter.com/zwounds">@stevezweibel</a></p>
                         <p>Cailean Cooney <a href="https://twitter.com/_csmcc">@_csmcc</a></p>
-                        <p>Harlan Kellaway <a href="https://twitter.com/DigiHumanatee">@DigiHumanatee</a></p>
-                        <p>Gioia Stevens <a href="https://twitter.com/gioiastevens" target="_blank"
-                                                        >@gioiastevens</a></p><br/>
+                        <p>Harlan Kellaway <a href="https://twitter.com/DigiHumanatee">@DigiHumanatee</a></p><br/>
                         <small>Thanks to Professors Matt Gold &amp; Dennis Tenen
                         </small>
                     </section>
