--- a/presentations/dhbox4lib.html
+++ b/presentations/dhbox4lib.html
@@ -165,6 +165,8 @@
                     <section>
                         <h1>Next Steps</h1>
                         <p>More custom installs</p>
+                        <p>More security/hardening</p>
+                        <p>User feedback</p>
                         <p></p>
                         <p>
                             <a href="#" class="navigate-right"> &rarr; </a>
