--- a/presentations/raspberry.html
+++ b/presentations/raspberry.html
@@ -231,7 +231,7 @@
 						<p>Cheap, disposable computing</p>
 						<br />
 						<div style="float:left;width:35%;margin-right:10px;">
-							<img src="http://www.adafruit.com/images/large/basicsensors_LRG.jpg"
+							<img src="images/basicsensors_LRG.jpg"
 								alt="Sensors" style="width:100%;height:auto;" />
 						</div>
 						<ul style="float:left;width:60%">
