--- a/presentations/dhboxCUNYIT.html
+++ b/presentations/dhboxCUNYIT.html
@@ -51,7 +51,7 @@
                 </p>
             </section>
             <section>
-               <h1>Another Slide</h1>
+               <h1>Project History</h1>
                <p>
                     <a href="#" class="navigate-down"> &darr; </a>
                 </p>
@@ -144,6 +144,14 @@
 			<section data-background="images/devices.png"></section>		
 
 			<section>
+				<h1>Challenges</h1>
+				<ul>
+				<li>Connectivity</li>
+				<li>Security</li>
+				<li>Storage</li>
+				</ul>
+			</section>
+			<section>
 				<h1>Future</h1>
 				<ul>
 				<li>Documentation</li>
@@ -169,7 +177,7 @@
                 <h1><img src="images/logo.png" style='max-height: 400px;max-width: 400px'></h1>
                 <p>DH Box <a href="http://twitter.com/DH_Bx">@DH_Box</a></p>
                 <p>Matt Gold <a href="https://twitter.com/mkgold">@MkGold</a></p>
-                <p>Patrick Smyth <a href="https://twitter.com/">@PSmyth</a></p>
+                <p>Patrick Smyth <a href="https://twitter.com/">@psmyth01</a></p>
                 <p>Stephen Zweibel <a href="http://twitter.com/zwounds">@stevezweibel</a></p>
                 <br/>
             </section>
