--- a/presentations/dhboxCUNYIT.html
+++ b/presentations/dhboxCUNYIT.html
@@ -181,7 +181,7 @@
                     <li>Automate user registration process</li>
                 </ul>
             </section>
-            <section data-background="images/Gantt.jpg"></section>            
+            <section data-background="images/gantt.png"></section>            
         </section>
         <!-- Questions -->
         <section data-state="blackout">
