--- a/about.html
+++ b/about.html
@@ -1,132 +1,71 @@
 ---
 layout: default
-title: About
+title: Resume
 ---
 
-<div>
 <p>srzweibel (at) gmail (dot) com</p>
-
-<h3 id="professionalexperience">Professional Experience</h3>
-
-<p><strong>Hunter College</strong>: Visiting Lecturer working in Reference and Emerging Technologies<br/>
-<em>Oct. 2012-Present</em> </p>
-
-<p>Adjunct Reference Librarian<br/>
-<em>Sep. 2010-Oct. 2012</em></p>
-
+<h3 id="professional-experience">Professional Experience</h3>
+<p><strong>Hunter College</strong>: Visiting Lecturer <br/><em>Oct. 2012-Present</em></p>
 <ul>
-<li>Planned, built, and deployed a mobile library catalog for CUNY Libraries</li>
-<li>Developed web application to track and analyze
-reference questions&#8217; frequency, length, nature, and other data, to
-inform personnel and resource management (Currently used at Hunter College, and in libraries in South Carolina and Nigeria)</li>
-<li>Built and implemented a cloud-based RFID solution to enhance
-accuracy in library inventory</li>
-<li>Provide reference and research service to graduates and
-undergraduates at the Health Professions Library</li>
-<li>Assist students by appointment in navigating academic databases and
-citing resources</li>
-<li>Teach information literacy classes to nursing students on search
-strategy, Medline, CINAHL, APA, Refworks, Zotero</li>
+<li>Planned, built, and deployed a mobile, responsive library catalog for CUNY+, including custom API</li>
+<li>Developed a web application to track and analyze reference data (frequency, length, and nature of questions) to inform personnel and resource management; in use across Hunter College Library system</li>
+<li>Wrote a macro to automate catalog record deletion, saving thousands of hours of cataloging labor</li>
+<li>Provide reference research service to graduates and undergraduates at the Health Professions Library</li>
+<li>Teach information literacy classes to nursing students on search strategy, Medline, CINAHL, APA, Refworks, Zotero</li>
+<li>Co-chair, LACUNY Emerging Technologies Committee</li>
+<li>Lead workshops to teach programming (Python, JavaScript) to CUNY librarians</li>
 </ul>
-
-<p><strong>New York University</strong>: Adjunct Reference/Cataloging/Virtual Reference Librarian<br/>
-<em>Sep. 2010-Jan. 2013</em></p>
-
+<p>Adjunct Reference Librarian <br/><em>Sep. 2010-Oct. 2012</em></p>
 <ul>
-<li>Provided reference service to students, faculty, and staff at Bobst
-Library</li>
-<li>Answered virtual reference questions via email, IM, and text</li>
-<li>Created original catalog records for the Tamiment Library collection
-of rare radical literature</li>
-<li>Generated original and complex copy catalog records of works written
-in English, French, German, Spanish, &amp; Portuguese</li>
+<li>Developed and piloted an RFID book inventory solution, using a programmable microcontroller</li>
 </ul>
-
-<p><strong>Columbia University</strong>: Intern, Special Collections Metadata and Cataloging<br/>
-<em>Nov. 2009-Aug. 2010</em></p>
-
+<p><strong>New York University</strong>: Adjunct Reference/Cataloging/Virtual Reference Librarian <br/><em>Sep. 2010-Jan. 2013</em></p>
 <ul>
-<li>Designed project to reclaim 'lost' items in collections, wrote
-instructional documents for implementation</li>
-<li>Generated original and copy catalog records for the Gillette
-collection of rare 17th and 18th century pamphlets</li>
-<li>Cataloged the Avery Library's collection of architectural literature</li>
+<li>Provide reference service to students, faculty, and staff at Bobst Library</li>
+<li>Answer virtual reference questions via email, IM, and text </li>
+<li>Created original catalog records for the Tamiment Library collection of rare radical literature </li>
+<li>Generated original and complex copy catalog records of works written in English, French, German, &amp; Spanish</li>
 </ul>
-
-<p><strong>Queens Library</strong> (Broadway Branch): Page<br/>
-<em>Apr.-Nov. 2009</em></p>
-
+<p><strong>Columbia University</strong>: Intern, Special Collections Metadata and Cataloging <br/><em>Nov. 2009-Aug. 2010</em></p>
 <ul>
-<li>Sorted and shelved various library materials according to Dewey
-Decimal Classification</li>
-<li>Recovered items requested by patrons at other branches of the
-library system for ILL</li>
+<li>Designed project to reclaim ‘lost’ items in collections, wrote instructional documents for implementation</li>
+<li>Generated original and copy catalog records for the Gillette collection of rare 17th and 18th century pamphlets</li>
+<li>Cataloged the Avery Library’s collection of architectural literature</li>
 </ul>
-
+<p><strong>Queens Library</strong> (Broadway Branch): Page <br/><em>Apr.-Nov. 2009</em></p>
+<ul>
+<li>Sorted and shelved various library materials according to Dewey Decimal Classification</li>
+<li>Recovered items requested by patrons at other branches of the library system for ILL</li>
+</ul>
 <h3 id="education">Education</h3>
-
-<p>MSLIS, <strong>Palmer School of Long Island University</strong><br/>
-<em>Aug 2010</em></p>
-
+<p>Master of Arts in Liberal Studies, Specializing in Digital Humanities, <strong>CUNY Graduate Center</strong> <br/><em>Expected Graduation 2015</em></p>
 <ul>
-<li>Relevant Coursework: Information Literacy Instruction, Online
-Information Retrieval Technology, Metadata, Website Architecture,
-Statistics</li>
+<li>Exploring the intersection between computational methods and humanities inquiry</li>
 </ul>
-
-<p>Bachelor of Liberal Arts, <strong>St. John&#8217;s College</strong>, Santa Fe<br/>
-<em>May 2008</em></p>
-
+<p>MSLIS, <strong>Palmer School of Long Island University</strong> <br/><em>Aug 2010</em></p>
 <ul>
-<li>Rigorous collaborative study of primary source material in Western
-philosophy, mathematics, science (including laboratory work), and
-literature</li>
-<li>Emphasis on critical thinking and analysis; evaluations based on
-essay writing, constructive class discussion, and oral examination</li>
+<li>Selected Coursework: Information Literacy Instruction, Online Information Retrieval Technology, Metadata, Website Architecture, Statistics</li>
 </ul>
-
+<p>Bachelor of Liberal Arts, <strong>St. John's College</strong>, Santa Fe <br/><em>May 2008</em></p>
+<ul>
+<li>Rigorous collaborative study of primary source material in Western philosophy, mathematics, science (including laboratory work), and literature</li>
+<li>Emphasis on critical thinking and analysis; evaluations based on essay writing, constructive class discussion, and oral examination</li>
+</ul>
 <h3 id="teaching">Teaching</h3>
-<h4>Curricular</h4>
 <ul>
-<li><p>Library Research sessions for Nursing 702: Nursing Research<br/>
-<em>Fall 2011, Spring-Fall 2013</em></p></li>
-<li><p>Information Literacy sessions for Nursing 700: Foundations of
-Nursing Science<br/>
-<em>Fall 2011, Spring-Fall 2013</em></p></li>
-<li><p>Information Literacy sessions for Nursing 380: Undergraduate Nursing
-Research<br/>
-<em>Spring 2010, Spring-Fall 2013</em></p></li>
+<li>Library Research sessions for Nursing 702: Nursing Research <br/><em>2011-2015</em></li>
+<li>Information Literacy sessions for Nursing 700: Foundations of Nursing Science <br/><em>2011-2015</em></li>
+<li>Information Literacy sessions for Nursing 380: Undergraduate Nursing Research <br/><em>2010-2015</em></li>
 </ul>
-<h4>Professional Development Workshops</h4>
+<h3 id="publications-presentations">Publications &amp; Presentations</h3>
 <ul>
-<li>Library Web APIs: Learn Javascript &amp; HTML to Take Advantage of Available Metadata<br/>
-<em>April 2013</em></li>
-<li>Python &amp; MARC: Basics of Programming to Simplify &amp; Automate Workflows<br/>
-<em>Sept. 2013</em></li>
-</ul>
-
-<h3 id="specialprojects">Special Projects</h3>
-<ul>
-<li>Analyzed Columbia University's raw circulation data to create
-longitudinal study of user behavior, presented analysis and
-interpretation to Access Services Coordinating Committee and Avery
-staff</li>
-<li>Wrote macros automating catalog record deletion/modification, credited for saving hundreds of
-man-hours for Hunter College cataloging department</li>
-<li>Invented and developed an open-source RFID inventory solution for
-libraries using C&#9839; and a programmable microcontroller. Currently
-implementing a pilot program with funding from Hunter College.</li>
-</ul>
-
-<h3 id="papers">Publications &amp; Presentations</h3>
-
-<ul>
-<li>Zweibel, S., &amp; Lane, Z. (2012). Probing the Effects of
-Policy Changes by Evaluating Circulation Activity Data at Columbia
-University Libraries, The Serials Librarian, 63(1), 17&#8211;27.</li>
+<li>Zweibel, S., &amp; Lane, Z. (2012). Probing the Effects of Policy Changes by Evaluating Circulation Activity Data at Columbia University Libraries, The Serials Librarian, 63(1), 17–27.</li>
 <li>Zweibel, S. (2013). Augur for Reference Desk Statistics. Presented at METRO Reference SIG, September 2013, New York, NY.</li>
 <li>Zweibel, S. (2013). Building a Library Catalog API. Presented at METRO Code4Lib SIG, April 2013, New York, NY.</li>
-<li>Zweibel, S., Davis, R. C., Tidal, J., &amp; Verbovetskaya, A. (2013, December 6). Life with Pi: Microcomputing in academia. Presentation at CUNY 12th Annual IT Conference, New York, NY. Handout available at http://robincamille.com/jj/cunyit/handout.pdf.</li>
+<li>Zweibel, S., Davis, R. C., Tidal, J., &amp; Verbovetskaya, A. (2013, December 6). Life with Pi: Microcomputing in academia. Presented at CUNY 12th Annual IT Conference, New York, NY. Handout available at http://robincamille.com/jj/cunyit/handout.pdf.</li>
+<li>Zweibel, S., &amp; Stevens, G. (2014). DH Box: A Computer Lab in the Cloud. Presented at Hunter ACERT, May 2014, New York, NY.</li>
+<li>Zweibel, S., Gold, M., &amp; Smyth, P. (2014, December). DH Box: A Push-Button Computer Lab. Presented at CUNY 13th Annual IT Conference, New York, NY.</li>
+<li>Zweibel, S., Gold, M., Smyth, P., &amp; Cooney, C. (2015, January). DH Box: A Push-Button Computer Lab. Presented at METRO Annual Conference 2015, New York, NY.</li>
 </ul>
 
 <h3 id="skills">Skills</h3>
@@ -157,4 +96,3 @@ University Libraries, The Serials Librarian, 63(1), 17&#8211;27.</li>
 </dl>
 
 <p>Member ALA, ACLR</p>
-</div>
