--- a/presentations/ipython.html
+++ b/presentations/ipython.html
@@ -32,42 +32,46 @@
             <div class="slides">
                 <!-- Intro -->
                 <section>
-                    <h1><img src="images/ipythonlogo.png" style='max-height: 400px;max-width: 400px'></h1>
+                    <!-- <h1><img src="images/ipythonlogo.png" style='max-height: 400px;max-width: 400px'></h1> -->
                     <h1>IPython Notebooks</h1>
                 </section>
                 <section>
-                    <h1><img src="images/jupyter.png" style='max-height: 400px;max-width: 400px'></h1>
+                    <h1><img src="images/jupyter.svg" style='max-height: 400px;max-width: 400px'></h1>
                     <h1>Jupyter</h1>
                 </section>
                 <section>
                     <section>
                     <!-- started as -->
                         <h1>Web-based computation sandbox</h1>
+                        <p><a href="https://tmpnb.org/">An example</a></p>
                     </section>
                     <section>
                     <!-- became -->
-                        <h1>Accessible, Instantly Reproducible Research</h1>
-                        <h1>Interactive Digital Textbooks</h1>
+                        <h2>Accessible, Instantly Reproducible Research Platform</h2>
+                        <br />
+                        <br />
+                        <br />
+                        <h2>Interactive Digital Textbook</h2>
                     </section>
                 </section>
                 <section>
                     <section>
                         <h1>A new way to do research</h1>
-                        <p>Experimenting</p>
-                        <p>Documenting</p>
-                        <p>Reproducing</p>
                         <p>
                             <a href="#" class="navigate-down"> &darr; </a>
                         </p>
                     </section>
                     <section>
-                        <h1>Open Research</h1>
+                        <h2>Experimentation</h2>
+                        <p>Form hypothesis – Test hypothesis – Evaluate data – <br>Form conclusion – Repeat</p>
+                        <br />
+                        <br />
+                        <h2>Documentation</h2>
                         <p>Helps researchers keep track of their work</p>
-                        <p>form hypothesis – test hypothesis – evaluate data – form conclusion from data – repeat</p>
-                        <p>research data, analysis, and code</p>
-                        <p>
-                            <a href="#" class="navigate-down"> &darr; </a>
-                        </p>
+                        <br />
+                        <br />
+                        <h2>Reproduction</h2>
+                        <p>Research data, analysis, and code in one place</p>
                     </section>
                 </section>
                 <section>
@@ -76,42 +80,63 @@
                     </section>
                     <section>
                         <h1>Supplement to Published Articles</h1>
-                        <p><a href="https://github.com/ipython/ipython/wiki/A-gallery-of-interesting-IPython-Notebooks#reproducible-academic-publications">Reproducible research in the browser!</a></p>
                         <p><a href="http://www.sciencedirect.com/science/article/pii/S0040580914000811">The probability of improvement in Fisher’s geometric model: A probabilistic approach</a></p>
                         <p><a href="http://conferences.computer.org/hptcdl/2014/papers/7020a047.pdf">Parallel Prefix Polymorphism Permits
 Parallelization, Presentation &amp Proof</a></p>
                         <p><a href="http://www.nature.com/ismej/journal/v7/n3/full/ismej2012123a.html">Collaborative Cloud-enabled Tools Allow Rapid, Reproducible Biological Insights</a></p>
-                        <p>
-                            <a href="#" class="navigate-down"> &darr; </a>
-                        </p>
-                    </section>
-                    <section>
-                        <h1>Reproducibility</h1>
+                        <p><a href="http://nbviewer.ipython.org/gist/empet/eeb8bbe354e709bf590b">Impact factors</a></p>
                         <p><a href="https://www.authorea.com/users/3/articles/3904/_show_article">Interactive embedded charts</a></p>
                     </section>
                     <section>
-                        <h1><a href="http://nbviewer.ipython.org/gist/empet/eeb8bbe354e709bf590b">Impact factor</a></h1>
+                        <h2>Response to Reproducibility Crisis in Peer Review</h2>
+                        <p>"Confirmation or even refutation of previously published data is an important component of the scientific process."</p>
+                        <br/>
+                        <br/>
+                        <br/>
+                        <br/>
+                        <small>Couchman, J. R. (2014). Peer Review and Reproducibility. Crisis or Time for Course Correction? Journal of Histochemistry and Cytochemistry, 62(1), 9–10. doi:10.1369/0022155413513462</small>
                     </section>
                 </section>
                 <section>
                     <section>
                         <h1>Teaching &amp Learning</h1>
-                        <p>Much less context switching</p>
-                        <!-- Students get easily lost when there is frequent window switching and they have to keep track both of where they are and their instructor is. -->
-                        <p>Always available (download or online)</p>
-                        <p>Students solve a large problem by solving multiple smaller problems</p>
-                    </section>
-                    <section>
                         <p><a href="https://wakari.io/nb/url///wakari.io/static/notebooks/Lecture_4_Matplotlib.ipynb">Math</a></p>
-                        <p><a href="nbviewer.ipython.org/gist/jhemann/4569783">Science</a></p>
+                        <p><a href="http://nbviewer.ipython.org/gist/jhemann/4569783">Science</a></p>
                         <p><a href="https://github.com/ptwobrussell/Mining-the-Social-Web-2nd-Edition">Text Analysis</a></p>
                         <p><a href="http://nbviewer.ipython.org/urls/bitbucket.org/pucktronix/pyoracle/raw/d046b2bcf473503fa356094cfe4cff774d1aaefc/270D.ipynb">Music!</a></p>
                         <p><a href="http://nbviewer.ipython.org/github/fbkarsdorp/python-course/blob/master/Chapter%201%20-%20Getting%20started.ipynb">Humanities Computation</a></p>
                     </section>
-                </section>
-                <section>
-                    <h1>Live Example</h1>
-                    <p><a href="https://tmpnb.org/">A temporary notebook</a></p>
+                    <section>
+                        <h1>Classroom Benefits</h1>
+                        <p>Much less context switching</p>
+                        <br/>
+                        <br/>
+                        <!-- Students get easily lost when there is frequent window switching and they have to keep track both of where they are and their instructor is. -->
+                        <p>Always available (download or online)</p>
+                        <br/>
+                        <br/>
+                        <p>Students solve a large problem by solving multiple smaller problems</p>
+                    </section>
+                    <section>
+                        <h1>Nothing's Perfect</h1>
+                        <p>Not simple to install</p>
+                        <p>Learning curve</p>
+                    </section>
+                    <section>
+                        <h1>Teacher feedback</h1>
+                        <small>ANDERS LEHMANN, AARHUS UNIVERSITY, teaching physics</small>
+                        <ul>
+                            <li>More attention in class</li>
+                            <li>More questions to the subject at hand</li>
+                            <li>More interactive learning</li>
+                        </ul>
+                        <br/>
+                        <br/>
+                    </section>
+                    <section>
+                        <h1>Greatest Benefit</h1>
+                        <p>Lets us engage with PROCESS.</p>
+                    </section>
                 </section>
                 <section>
                     <section>
@@ -120,27 +145,8 @@ Parallelization, Presentation &amp Proof</a></p>
                     </section>
                 </section>
                 <section>
-                    <h1>Teacher feedback</h1>
-                    <p>RESULTS</p>
-                    <ul>
-                        <li>More attention in class</li>
-                        <li>More questions to the subject at hand</li>
-                        <li>More interactive learning</li>
-                    </ul>
-                    <small>ANDERS LEHMANN, AARHUS UNIVERSITY, teaching physics</small>
-                </section>
-                <section>
-                    <h1>Nothing's Perfect</h1>
-                    <p>Not simple to install</p>
-                    <p>That's really it...</p>
-                </section>
-                <section>
-                    <h1>Greatest Advantage</h1>
-                    <p>Lets us engage with PROCESS. So little do we get to see that, only a finished project.</p>
-                </section>
-                <section>
                     <h1>Further resources</h1>
-                    <p><a href="https://github.com/ipython/ipython/wiki/A-gallery-of-interesting-IPython-Notebooks#reproducible-academic-publications">Fantastic Notebooks</a></p>
+                    <p><a href="https://github.com/ipython/ipython/wiki/A-gallery-of-interesting-IPython-Notebooks#reproducible-academic-publications">Links to reproducible research</a></p>
                 </section>
             </div>
         </div>
