--- a/presentations/catalogAPI.html
+++ b/presentations/catalogAPI.html
@@ -5,7 +5,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Use of Catalog APIs</title>
+		<title>Catalog API</title>
 
 		<meta name="description" content="A presentation on the CUNY+ API">
 		<meta name="author" content="Stephen Zweibel">
@@ -39,15 +39,13 @@
 			<div class="slides">
 
 				<section>
-					<h1>Catalogs Exposed!</h1>
-					<h3>Web APIs and Libraries</h3>
+					<h1>Turning the Internet into Data</h1>
+					<h3>A Catalog Web API</h3>
 					<p>
 						<small>by <a href="https://github.com/szweibel">Stephen Zweibel</a>
 						</small> 
 					</p>
 				</section>
-
-				<!-- Nested vertical slides -->
 				<section>
 					<section>
 					<h2>The CUNY+ Catalog</h2>
@@ -90,24 +88,20 @@
 650 #1 $a Soccer. </pre>
 					</section>
 				</section>
-
 				<section>
-					<!-- <section>
-						<p></p>
-					</section> -->
 					<section data-state="alert">
 						<h2>Problem</h2>
 						<p>
 							How could this data be accessed programatically?
 						</p>
-						<pre class="fragment fade-out"><code contenteditable>{
+						<pre><code contenteditable>{
       "title": "Methods for the analysis of large data-sets",
       "author": "Di Ciaccio, Agostino.",
       "year": "2012",
       "library": "Hunter Main",
       "docNumber": "007268706",
 }</code></pre>
-						<pre class="fragment fade-out"><code contenteditable>&lt;CD&gt;
+						<pre><code contenteditable>&lt;CD&gt;
 &lt;TITLE&gt;Greatest Hits&lt;/TITLE&gt;
 &lt;ARTIST&gt;Dolly Parton&lt;/ARTIST&gt;
 &lt;COUNTRY&gt;USA&lt;/COUNTRY&gt;
@@ -117,10 +111,9 @@
 &lt;/CD&gt;</code></pre>
 					</section>
 				</section>
-
 				<section>
 					<section>
-						<h2>Scraping</h2>
+						<h2>Web Scraping</h2>
 						<p>
 							<img src="images/source.png">
 						</p>
@@ -147,9 +140,6 @@
 						<a href="#" class="navigate-down">
 							↓
 						</a></p>
-						<aside class="notes">
-							I looked, first, for JSON data
-						</aside>
 					</section>	
 					<section>
 						<h2>Behind the Curtain</h2>
@@ -208,10 +198,14 @@ app.get('/marc', function (req, res){
 				</section>
 				<section>
 					<section>
+						<h1>Documentation</h1>
+						<p><a href="https://github.com/szweibel/CUNYplusmobile">Publicly available</a></p>
+					</section>
+					<section>
 						<h2>The API</h2>
 						<p>
 							Currently located at:
-							<pre><code><a href="mighty-wildwood-7308.herokuapp.com">mighty-wildwood-7308.herokuapp.com</a></code></pre>
+							<pre><a href="mighty-wildwood-7308.herokuapp.com">mighty-wildwood-7308.herokuapp.com</a></pre>
 							To do a search for 'global warming' in Hunter College: 
 							<pre><code>/search?query=global+warming&queryType=All+Fields&school=HUNTER</code></pre>
 							Try it out <a href="http://mighty-wildwood-7308.herokuapp.com/search?query=global+warming&queryType=All+Fields&school=HUNTER">Here</a>
@@ -221,135 +215,76 @@ app.get('/marc', function (req, res){
 						</a>
 					</section>
 					<section>
-						<h2>Other Searches</h2>
+						<h2>Deeper Data</h2>
 						<ul>
-							<li><a href="/details?docNumber=006466386&library=HCRSV">/details?docNumber=006466386&library=HCRSV</a></li>
+							<li><a href="http://mighty-wildwood-7308.herokuapp.com/details?docNumber=006466386&library=HCRSV">/details?docNumber=006466386&library=HCRSV</a></li>
 							<li><a href="http://mighty-wildwood-7308.herokuapp.com/marc?docNumber=006466386">/marc?docNumber=006466386</a></li>
 						</ul>
 					</section>
 				</section>
-
-				<section id="tutorial">
-					<section>
-						<h2>Small Tutorial</h2>
-					<p>Python</p>
-					<pre><code>import requests
-def lookup_ISBN(ISBN, school):
-    payload = {'query' : ISBN, 'queryType' : 'ISBN', 'school' : school}
-    r = requests.get('http://mighty-wildwood-7308.herokuapp.com/search', params=payload)
-    JSON_record = r.json()
-    return JSON_record</code></pre>
-    <p>Javascript</p>
-    <pre><code>var req = $.getJSON('http://mighty-wildwood-7308.herokuapp.com/search', 
-{'query':query, 'queryType': queryType, 'school': whichLibrary},
-function(data) {})
-.success(function(data) {
-    // Do stuff
-})</code></pre>
-						<a href="#" class="navigate-down">
-							↓
-						</a>
-					</section>
-
-					<section>
-						<p>						
-<script type="text/javascript">
-var APILocation = 'http://mighty-wildwood-7308.herokuapp.com';
-jQuery(document).ready(function(){
-	$('input[type=text]').on('keyup', function(event) {
-	    if (event.which == 13) {
-	        event.preventDefault();
-	        $('#search').click()
-	    }
-	});
-    $('#search').click(function(event) {
-    	$('#searchTitle').empty();
-        event.preventDefault();
-        var new_title = $('#title').val();
-        $.getJSON(APILocation + "/search", {'query':new_title, 'queryType' : 'TTL', 'school' : 'HUNTER'},function(data) {})
-            .success(function(data) {
-                var title = data.allBooks[0].name;
-                title = $.trim(title);
-                $('#searchTitle').append(title);
-            })
-            .error(function(data) { alert('error') });
-        $('#searchTitle').delay(2000).fadeIn();
-    });
-});
-</script>
-<p>(Check the source of this page for a working example)</p>
-						    <label class="control-label" for="barcode">Search:  </label><input type="text" size="100" id='title'>
-						    <input id='search' type="submit" name="search" value="Search">
-						    <div class='fadey' id='title_and_call'>
-						    <p id='searchTitle'></p>
-						    </div>
-						</p>	
-					</section>
-				</section>
-
-				<section>
-					<h2>Useful?</h2>
+				<!-- <section>
+					<h2>Uses?</h2>
 					<ul>
 						<li class="fragment roll-in">API Mashups (Worldcat, DOI.org, Amazon(?))</li>
 						<li class="fragment roll-in">Collection Development/Analysis</li>
 						<li class="fragment roll-in">Customize the Catalog Experience</li>
 						<li class="fragment roll-in">Empower Librarians to Use Their Own Metadata</li>
 					</ul>
-				</section>
-
+				</section> -->
 				<section>
 					<section data-state="soothe">
-						<h1>Possibilities</h1>
+						<h1>Applications</h1>
 						<a href="#" class="navigate-down">
 							↓
 						</a>
 					</section>
 					<section>
-						<h2>Collection Development!</h2>
+						<h2>A New Catalog</h2>
+						<ul>
+							<li>Mobile</li>
+							<li>Responsive</li>
+							<li>Clear UX</li>
+						</ul>
+						<p><a href="http://cunycatalog.site44.com/">Example</a></p>
+						<a href="#" class="navigate-down">
+							↓
+						</a>
+					</section>
+					<section>
+						<h2>Collection Development Scripting</h2>
 						<p>Given a list of ISBNs, for each item get:</p>
 						<ol>
 							<li>Title</li>
 							<li>Price</li>
 							<li>Holdings at all CUNY Libraries for this and any other edition</li>
-							<li class="fragment roll-in">Closest non-CUNY Library with the title</li>
-							<li class="fragment roll-in">Subject Headings</li>
-							<li class="fragment roll-in">Rating on Amazon</li>
 						</ol>
 						<a href="#" class="navigate-down">
 							↓
 						</a>
 					</section>
 					<section>
-						<h2>Simplify Inventory!</h2>
+						<h2>Automate Shelf-reading</h2>
 						<p><img width='600' height='420' src="images/knowthyshelf.png"></p>
-						<p><a href="https://github.com/szweibel/know-thy-shelf">(Know Thy Shelf)</a></p>
-						<a href="#" class="navigate-down">
-							↓
-						</a>
+						<p><a href="https://github.com/szweibel/know-thy-shelf">Know Thy Shelf</a></p>
 					</section>
 					<section>
-						<h2>Create a Whole New Catalog!</h2>
-						<ul>
-							<li>Mobile</li>
-							<li>Responsive</li>
-							<li>Built with a special collection in mind?</li>
-							<li>Customized for your patrons' needs</li>
-						</ul>
-						<p><a href="http://cunycatalog.site44.com/">For Instance</a></p>
+						<h1>Fun</h1>
+						<p>Exploration</p>
+						<p>Serendipity</p>
+					</section>
+					<section>
+						<h1>A Data Experiment</h1>
+						<p><a href="http://52.6.190.81:8888/notebooks/Experiment.ipynb">Live Version</a></p>
+						<p><a href="http://nbviewer.ipython.org/github/szweibel/ipython-experiment/blob/master/Experiment.ipynb">Static Version</a></p>
 					</section>
 				</section>
-
-				<section id="others">
-					<h2>Other APIs</h2>
-					<p>
-						<ul>
-						<li><a href="http://apps.appl.cuny.edu:5661/U-CUN01?version=1.1&operation=searchRetrieve&query=rec.id=006396597&startRecord=1&maximumRecords=15">CUNY Catalog</a></li>
-						<li><a href="http://lookup.cunylibraries.org/">CUNY Holdings</a> <small>(Great documentation)</small></li>
-						<li><a href="http://oclc.org/developer/services">Worldcat APIs</a></li>
-						</ul>
-					</p>
-				</section>		
-
+				<section>
+					<section>
+						<h2>What came of my work?</h2>
+						<p>New interest in APIs at LACUNY</p>
+						<p></p>
+					</section>
+				</section>
 				<section data-state="blackout">
 					<h1>THE END</h1>
 					<h3>BY Stephen Zweibel</h3>
