--- a/presentations/knowshelf.html
+++ b/presentations/knowshelf.html
@@ -78,7 +78,7 @@
 
                 <section>
                     <section data-state="alert">
-                        <h2>My Library's Use Case</h2>
+                        <h2>Hunter Library's Use Case</h2>
                         <p>Inventory</p>
                     </section>
                     <section>
