--- a/presentations/dhbox.html
+++ b/presentations/dhbox.html
@@ -1,6 +1,8 @@
 
 <!DOCTYPE html>
 <html lang="en-US">
+<!doctype html>
+<html lang="en">
 
 	<head>
 		<meta charset="utf-8" />
@@ -15,18 +17,25 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 		<meta name="viewport"
 			content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<link rel="stylesheet" href="reveal/css/reveal.min.css" />
-		<link rel="stylesheet" href="reveal/css/theme/default.css" id="theme" />
-		<!-- For syntax highlighting -->
-		<link rel="stylesheet" href="reveal/lib/css/zenburn.css" />
-		<!-- If the query includes 'print-pdf', use the PDF print sheet -->
+
+		<link rel="stylesheet" href="reveal/css/reveal.css">
+		<link rel="stylesheet" href="reveal/css/theme/black.css" id="theme">
+
+		<!-- Theme used for syntax highlighting of code -->
+		<link rel="stylesheet" href="reveal/lib/css/zenburn.css">
+
+		<!-- Printing and PDF exports -->
 		<script>
-	document.write( '<link rel="stylesheet" href="reveal/css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print" />' );
-	</script>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+			var link = document.createElement( 'link' );
+			link.rel = 'stylesheet';
+			link.type = 'text/css';
+			link.href = window.location.search.match( /print-pdf/gi ) ? 'reveal/css/print/pdf.css' : 'reveal/css/print/paper.css';
+			document.getElementsByTagName( 'head' )[0].appendChild( link );
+		</script>
+
 		<!--[if lt IE 9]>
-	<script src="lib/js/html5shiv.js"></script>
-	<![endif]-->
+		<script src="lib/js/html5shiv.js"></script>
+		<![endif]-->
 	</head>
 	<body>
 
@@ -152,7 +161,7 @@
 		</div>
 
 		<script src="reveal/lib/js/head.min.js"></script>
-		<script src="reveal/js/reveal.min.js"></script>
+		<script src="reveal/js/reveal.js"></script>
 		<script>
 // Full list of configuration options available here:
 // https://github.com/hakimel/reveal.js#configuration
