--- a/presentations/raspberry.html
+++ b/presentations/raspberry.html
@@ -16,7 +16,7 @@
 		<meta name="viewport"
 			content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<link rel="stylesheet" href="reveal/css/reveal.css" />
-		<link rel="stylesheet" href="reveal/css/theme/default.css" id="theme" />
+		<link rel="stylesheet" href="reveal/css/theme/black.css" id="theme" />
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="reveal/lib/css/zenburn.css" />
 		<!-- If the query includes 'print-pdf', use the PDF print sheet -->
@@ -401,7 +401,7 @@
 				</div>
 
 		<script src="reveal/lib/js/head.min.js"></script>
-		<script src="reveal/js/reveal.min.js"></script>
+		<script src="reveal/js/reveal.js"></script>
 		<script>
 // Full list of configuration options available here:
 // https://github.com/hakimel/reveal.js#configuration
