--- a/presentations/data.html
+++ b/presentations/data.html
@@ -36,6 +36,21 @@
 <div class="reveal">
 <!-- Any section element inside of this container is displayed as a slide -->
 <div class="slides">
+<section>
+	<h1>Data Management</h1>
+</section>
+<section>
+	<div>What is data management?</div>
+</section>
+<section>
+	<div>What constitutes data?</div>
+</section>
+<section>
+	<div>What are your responsibilities to your data?</div>
+</section>
+<section>
+	<div></div>
+</section>
 <section data-state="blackout">
 	<h1>THE END</h1>
 	<h3>BY Stephen Zweibel</h3>
