--- a/presentations/MALS.html
+++ b/presentations/MALS.html
@@ -5,7 +5,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Data Management</title>
+		<title>MALS Research</title>
 
 		<meta name="description" content="A presentation on the CUNY+ API">
 		<meta name="author" content="Stephen Zweibel">
@@ -34,125 +34,39 @@
 <!-- Any section element inside of this container is displayed as a slide -->
 <div class="slides">
 <section>
-	<h1>Data Management</h1>
+	<h1>Research for MALS Students</h1>
 </section>
 <section>
-	<div>What is data management?</div>
-</section>
-<section>
-	<div>history of data management plans</div>
-	<div>DMP started seriously with the NSF in 2011</div>
-They had found that up to %80 of data lost within 20 years
-</section>
-<section>
-	<div>Why share data?</div>
-    <ul>
-    <li>Ensures reproducibility</li>
-    <li>Promote discovery</li>
-    <li>Synthesis for data mining</li>
-    <li>Citation</li>
-    <li>Correct credit</li>
-    <li>Required!</li>
-    </ul>
-</section>
-<section>
-	<div>Definitions</div>
-	<div>Research data: material or information accepted to be necessary to come to your conclusion</div>
-</section>
-<section>
-<h2>Version Control</h2>
-<img src="images/datacomic.png" style='max-height: 400px;max-width: 400px'>
-</section>
-<section>
-	<div>What constitutes data?</div>
-</section>
-<section>
-	<section>
-		<div>What data do you expect to have?</div>
-	</section>
-</section>
-<section>
-	<section>
-		<div>What are your responsibilities to your data?</div>
-	</section>
-</section>
-<section>
-<h2>for useful data:</h2>
-<dl>
-	<dt>methods:</dt>
-	<dd>what was done</dd>
-	<dd>how it was done</dd>
-	<dd>instrumentation</dd>
-	<dd>limitations</dd>
-</dl>
-</section>
-<section>
-<dl>
-	<dt>code:</dt>
-	<dd>meanings</dd>
-	<dd>description/documentation</dd>
-	<dd>codebook</dd>
-	<dd>data dictionary</dd>
-</dl>
-</section>
-<section>
-	<h3>what would a stranger need to know about your data to be able to trust and use it?</h3>
-</section>
-<section>
-	<section>
-		<div>how will you expose it?</div>
-	</section>
-</section>
-<section>
-	<section>
-		<div>how will you preserve it?</div>
-	</section>
-	<section>
-		<img src="images/medialife.png">
-	</section>
-</section>
+	<h2>How to search for resources</h2>
+Avoiding plagiarism
+How to make a citation
+Purdue OWL
+How to take notes
+Lit review
+Differences in disciplines
 
-<section>
-	<section>
-		<h3>Writing a Data Management Plan</h3>
-	</section>
-	<section>
-		Review:
-	    <div>what data do you expect to have?</div>
-	        what tools are you using for your data?
-	        how much data?
-	        is it possible to regenerate your data?
-	    <div>How will you store it?</div>
-	        multiple locations: Here, near, and far
-	        how will it be maintained and managed?
-	    <div>what are your obligations for these data?</div>
-	        security
-	            physical
-	            network
-	            computer system and file
-	        privacy
-	            Personally identifying info (PII)
-	            personal health info (PHI)
-	        intellectual property
-	    <div>how will you expose it?</div>
-	        what will be shared?
-	        what is the audience?
-	        is it citable?
-	        persistent access
-	        quality assurance
-	    <div>how will you preserve it?</div>
-	        don't archive in proprietary format!
-	        sustainable formats:
-	            unencrypted
-	            uncompressed
-	            open standard
-	        domain specific repositories
-	        institutional repositories
-	</section>
 </section>
-<section data-state="blackout">
-	<h1>THE END</h1>
-	<h3>BY Stephen Zweibel</h3>
+<section>
+	<h2>Evaluating sources</h2>
+</section>
+<section>
+	<h2>Avoiding plagiarism</h2>
+</section>
+<section>
+	<h2>How to cite</h2>
+</section>
+<section>
+	<h2>Paper formatting</h2>
+	<p>Purdue OWL</p>
+</section>
+<section>
+	<h2>How to take notes</h2>
+</section>
+<section>
+	<h2>How and Why of Literature Reviews</h2>
+</section>
+<section>
+	<h2>Differences in Disciplines</h2>
 </section>
 </div>
 </div>
