--- a/presentations/dhbox4lib.html
+++ b/presentations/dhbox4lib.html
@@ -32,7 +32,7 @@
             <div class="slides">
                 <!-- Intro -->
                 <section>
-                    <h1><img src="images/logo.png" style='max-height: 400px;max-width: 400px'></h1>
+                    <h1><img src="images/DHBoxlogo.svg"></h1>
                     <h1>A Virtual<br/> Computer Lab<br/>in the Cloud <br/></h1>
                     <p>
                         <small><a href="https://twitter.com/_csmcc">Cailean Cooney</a>, <a href="https://twitter.com/DigiHumanatee">Harlan Kellaway</a>, &amp; <a href="https://github.com/szweibel">Stephen Zweibel</a>
@@ -85,7 +85,7 @@
                 </section>
                 <section>
                     <section>
-                        <h1><img src="images/logo.png" style='max-height: 400px;max-width: 400px'></h1>
+                        <h1><img src="images/DHBoxlogo.svg" style='max-height: 400px;max-width: 400px'></h1>
                         <ul>
                             <li>Virtual computer in the cloud</li>
                             <li>DH tools pre-installed</li>
