--- a/presentations/MALS.html
+++ b/presentations/MALS.html
@@ -47,7 +47,53 @@ Differences in disciplines
 
 </section>
 <section>
-	<h2>Evaluating sources</h2>
+	<section>
+		<h2>Finding &amp; Evaluating sources</h2>
+	</section>
+	<section>
+		<h2>Peer-reviewed Articles</h2>
+		<h2>Books</h2>
+	</section>
+	<section>
+		<h2>OneSearch</h2>
+	</section>
+	<section>
+		<ul>
+			<li>Encyclopedias</li>
+			<li>Dictionaries</li>
+			<li>Biographies</li>
+			<li>Bibliographies</li>
+			<li>Directories</li>
+			<li>Almanacs</li>
+			<li>Maps &amp; Atlases</li>
+		</ul>
+	</section>
+	<section>
+		<ul>
+			<li>Government Documents</li>
+			<li>Statistics</li>
+			<li>Timelines</li>
+			<li>Images</li>
+		</ul>
+	</section>
+	<section>
+		<h2>Evaluation</h2>
+	</section>
+	<section>
+		<dl>
+			<dd>Author Authority</dd> 
+			<dt>Who created the item?  What is his or her affiliation?</dt>
+			<dd>Audience and Purpose</dd>
+			<dt>Who is the intended audience?  Why was the item created?</dt>
+			<dd>Accuracy and Completeness</dd>
+			<dt>Is the evidence reliable?  Are the important points covered?</dt>
+			<dd>Footnotes and Documentation</dd>
+			<dt>Are the author's sources clearly identified with complete citations to allow you to find the original source yourself?</dt>
+			<dd>Perspective and Bias</dd>
+			<dt>How do the author's bias and perspective inform the arguments and evidence presented?</dt>
+		</dl>
+		<small style="padding-top: 100px;">From <i>The Information-Literate Historian</i> by Jenny L. Presnell</small>
+	</section>
 </section>
 <section>
 	<h2>Avoiding plagiarism</h2>
