--- a/presentations/MALS.html
+++ b/presentations/MALS.html
@@ -37,14 +37,9 @@
 	<h1>Research for MALS Students</h1>
 </section>
 <section>
-	<h2>How to search for resources</h2>
-Avoiding plagiarism
-How to make a citation
-Purdue OWL
-How to take notes
-Lit review
-Differences in disciplines
-
+	<section>
+		<h2>How to search for resources</h2>
+	</section>
 </section>
 <section>
 	<section>
@@ -96,20 +91,49 @@ Differences in disciplines
 	</section>
 </section>
 <section>
-	<h2>Avoiding plagiarism</h2>
+	<h2>How to take notes</h2>
 </section>
 <section>
-	<h2>How to cite</h2>
+	<section>
+		<h2>Writing a paper</h2>
+	</section>
+	<section>
+		<img src="http://www.williamcronon.net/researching/questionimages/932_Framing_a_research_question_fig07_highres.jpg">		
+	</section>
+</section>
+<section>
+	<section>
+		<h2>Avoiding plagiarism</h2>
+		 <p>the uncredited use (both intentional and unintentional) of somebody else's words or ideas.</p>
+		<small style="padding-top: 100px;">From The Purdue OWL</small>
+	</section>
 </section>
 <section>
 	<h2>Paper formatting</h2>
 	<p>Purdue OWL</p>
 </section>
 <section>
-	<h2>How to take notes</h2>
+	<section>
+		<h2>How and Why of Literature Reviews</h2>
+	</section>
+	<section>
+	<h2>What?</h2>
+	<p>A survey of sources (books, articles, etc.) on a particular topic</p>		
+	<p>Sometimes a summary, often synthetic and even critical</p>
+	</section>
+	<section>
+		<h2>Why?</h2>
+		<p>Help to get reader up to speed</p>
+		<p>Provide a guide to the topic</p>
+		<p>Serve as a foundation of knowledge for the rest of the paper</p>
+	</section>
+	<section>
+		<h2>How?</h2>
+
+	</section>
 </section>
 <section>
-	<h2>How and Why of Literature Reviews</h2>
+	<h2>How to cite</h2>
 </section>
 <section>
 	<h2>Differences in Disciplines</h2>
