--- a/presentations/MALS.html
+++ b/presentations/MALS.html
@@ -98,7 +98,14 @@
 		<h2>Writing a paper</h2>
 	</section>
 	<section>
+		<h2>Choosing a topic</h2>
 		<img src="http://www.williamcronon.net/researching/questionimages/932_Framing_a_research_question_fig07_highres.jpg">		
+	</section>
+	<section>
+		<p>Search for primary documents</p>
+		<p>Read scholarly literature</p>
+		<p>Look for debates and uncertainties</p>
+		<small style="padding-top: 100px;">Booth, Wayne C., Gregory G. Colomb, and Joseph M. Williams. The Craft of Research. Chicago: University of Chicago Press, 2008.</small>
 	</section>
 </section>
 <section>
