--- a/presentations/MALS.html
+++ b/presentations/MALS.html
@@ -38,6 +38,35 @@
 </section>
 <section>
 	<section>
+		<h2>Finding a topic</h2>
+	</section>
+	<section>
+		<p>Think of work you've done before</p>
+		<p>What are your personal interests?</p>
+		<p>Consider current events</p>
+		<p>Recall your own experiences</p>
+	</section>
+	<section>
+		<h2>Narrow down your topic</h2>
+	</section>
+	<section>
+		<p>Find something of interest</p>
+		<p>Raise a question</p>
+		<p>Next steps</p>
+		<p>RESEARCH IS ITERATIVE</p>
+	</section>
+	<section>
+		<img src="http://www.williamcronon.net/researching/questionimages/932_Framing_a_research_question_fig07_highres.jpg">
+	</section>
+	<section>
+		<p>Search for primary documents</p>
+		<p>Read scholarly literature</p>
+		<p>Look for debates and uncertainties</p>
+		<small style="padding-top: 100px;">Booth, Wayne C., Gregory G. Colomb, and Joseph M. Williams. The Craft of Research. Chicago: University of Chicago Press, 2008.</small>
+	</section>
+</section>
+<section>
+	<section>
 		<h2>How to search for resources</h2>
 	</section>
 </section>
@@ -76,7 +105,7 @@
 	</section>
 	<section>
 		<dl>
-			<dd>Author Authority</dd> 
+			<dd>Author Authority</dd>
 			<dt>Who created the item?  What is his or her affiliation?</dt>
 			<dd>Audience and Purpose</dd>
 			<dt>Who is the intended audience?  Why was the item created?</dt>
@@ -95,21 +124,6 @@
 </section>
 <section>
 	<section>
-		<h2>Writing a paper</h2>
-	</section>
-	<section>
-		<h2>Choosing a topic</h2>
-		<img src="http://www.williamcronon.net/researching/questionimages/932_Framing_a_research_question_fig07_highres.jpg">		
-	</section>
-	<section>
-		<p>Search for primary documents</p>
-		<p>Read scholarly literature</p>
-		<p>Look for debates and uncertainties</p>
-		<small style="padding-top: 100px;">Booth, Wayne C., Gregory G. Colomb, and Joseph M. Williams. The Craft of Research. Chicago: University of Chicago Press, 2008.</small>
-	</section>
-</section>
-<section>
-	<section>
 		<h2>Avoiding plagiarism</h2>
 		 <p>the uncredited use (both intentional and unintentional) of somebody else's words or ideas.</p>
 		<small style="padding-top: 100px;">From The Purdue OWL</small>
@@ -125,7 +139,7 @@
 	</section>
 	<section>
 	<h2>What?</h2>
-	<p>A survey of sources (books, articles, etc.) on a particular topic</p>		
+	<p>A survey of sources (books, articles, etc.) on a particular topic</p>
 	<p>Sometimes a summary, often synthetic and even critical</p>
 	</section>
 	<section>
